--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "equation-editor-react": "^0.0.10",
+    "history": "^5.3.0",
     "nerdamer": "^1.1.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -43,7 +44,6 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
   "author": "",
   "license": "ISC"
 }
